--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,7 +10,8 @@
     "target": "ES2020",
     "declaration": false,
     "moduleResolution": "node",
-    "experimentalDecorators": true
+    "experimentalDecorators": true,
+    "module": "ESNext"
   },
   "include": ["src/**/*", "mock/*"],
   "exclude": ["node_modules"]
