--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "redux-logger": "^3.0.6",
     "redux-saga": "^1.1.3",
     "redux-saga-catch": "^0.0.10",
-    "saga-duck": "^3.3.0"
+    "saga-duck": "^3.3.0",
+    "use-react-saga": "^0.0.8"
   },
   "scripts": {
     "lint": "eslint --ext .js,.jsx,.ts,.tsx ./src",
