--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "antd": "^4.0.3",
     "axios": "^0.19.2",
     "axios-hooks": "^1.10.0",
+    "file-saver": "^2.0.2",
     "history": "^5.0.0",
     "moment": "^2.24.0",
     "path-to-regexp": "^6.1.0",
@@ -58,6 +59,7 @@
     "@babel/preset-react": "^7.8.3",
     "@babel/preset-typescript": "^7.10.4",
     "@types/axios": "^0.14.0",
+    "@types/file-saver": "^2.0.1",
     "@types/jest": "^25.2.1",
     "@types/mockjs": "^1.0.2",
     "@types/reach__router": "^1.3.5",
