feat: bundle optimization

--- a/.babelrc
+++ b/.babelrc
@@ -5,19 +5,16 @@
     "@babel/preset-react"
   ],
   "plugins": [
-    ["import", { "libraryName": "antd", "style": "css" }],
     [
-      "@babel/plugin-transform-runtime",
-      {
-        "regenerator": true
-      }
+      "import",
+      { "libraryName": "antd", "libraryDirectory": "es", "style": "css" }
     ],
-    [
-      "@babel/plugin-proposal-decorators",
-      {
-        "legacy": true
-      }
-    ],
+    // [
+    //   "@babel/plugin-proposal-decorators",
+    //   {
+    //     "legacy": true
+    //   }
+    // ],
     ["@babel/plugin-proposal-class-properties", { "loose": true }]
   ]
 }
