--- a/package.json
+++ b/package.json
@@ -7,19 +7,12 @@
   "dependencies": {
     "@ant-design/icons": "^4.0.3",
     "@babel/runtime": "^7.10.4",
-    "animate.css": "^3.7.2",
     "antd": "^4.0.3",
     "axios": "^0.19.2",
-    "axios-hooks": "^1.10.0",
     "file-saver": "^2.0.2",
-    "history": "^5.0.0",
-    "moment": "^2.24.0",
     "path-to-regexp": "^6.1.0",
-    "react": "^16.13.0",
-    "react-dom": "^16.13.0",
-    "react-helmet": "^6.1.0",
+    "preact": "^10.5.4",
     "react-redux": "^7.2.0",
-    "react-transition-group": "^4.3.0",
     "react-use": "^14.1.1",
     "redux": "^4.0.5",
     "redux-logger": "^3.0.6",
@@ -31,6 +24,7 @@
   "scripts": {
     "lint": "eslint --ext .js,.jsx,.ts,.tsx ./src",
     "build": "cross-env MOCK_REQUEST=false webpack --config config/webpack.production.js",
+    "build:analyze": "cross-env MOCK_REQUEST=false BUNDLE_ANALYZE=true webpack --config config/webpack.production.js",
     "start": "cross-env MOCK_REQUEST=false webpack-dev-server --config config/webpack.development.js",
     "start:mock": "cross-env MOCK_REQUEST=true webpack-dev-server --config config/webpack.development.js",
     "test": "jest",
@@ -103,9 +97,15 @@
     "typescript": "^3.9.7",
     "typescript-loader": "^1.1.3",
     "webpack": "^4.42.0",
+    "webpack-bundle-analyzer": "^3.9.0",
     "webpack-cli": "^3.3.11",
     "webpack-dev-server": "^3.10.3",
     "webpack-manifest-plugin": "^2.2.0",
-    "webpack-merge": "^4.2.2"
+    "webpack-merge": "^4.2.2",
+    "cssnano": "^4.1.10",
+    "autoprefixer": "^10.0.1",
+    "postcss": "^8.1.1",
+    "postcss-cssnext": "^3.1.0",
+    "postcss-loader": "^4.0.3"
   }
 }
