--- a/package.json
+++ b/package.json
@@ -65,12 +65,14 @@
     "@types/styled-components": "^5.1.2",
     "@typescript-eslint/eslint-plugin": "^3.7.1",
     "@typescript-eslint/parser": "^3.7.1",
+    "autoprefixer": "^10.0.1",
     "babel-eslint": "^10.1.0",
     "babel-loader": "^8.0.6",
     "babel-plugin-import": "^1.13.0",
     "clean-webpack-plugin": "^3.0.0",
     "cross-env": "^7.0.2",
     "css-loader": "^3.4.2",
+    "cssnano": "^4.1.10",
     "dotenv-webpack": "^1.7.0",
     "enzyme": "^3.11.0",
     "enzyme-adapter-react-16": "^1.15.2",
@@ -91,21 +93,20 @@
     "less-loader": "^5.0.0",
     "mini-css-extract-plugin": "^0.9.0",
     "mockjs": "^1.1.0",
+    "postcss": "^8.1.1",
+    "postcss-cssnext": "^3.1.0",
+    "postcss-loader": "^4.0.3",
     "prettier": "^2.0.5",
     "style-loader": "^1.1.3",
     "styled-components": "^5.1.1",
     "typescript": "^3.9.7",
     "typescript-loader": "^1.1.3",
+    "url-loader": "^4.1.0",
     "webpack": "^4.42.0",
     "webpack-bundle-analyzer": "^3.9.0",
     "webpack-cli": "^3.3.11",
     "webpack-dev-server": "^3.10.3",
     "webpack-manifest-plugin": "^2.2.0",
-    "webpack-merge": "^4.2.2",
-    "cssnano": "^4.1.10",
-    "autoprefixer": "^10.0.1",
-    "postcss": "^8.1.1",
-    "postcss-cssnext": "^3.1.0",
-    "postcss-loader": "^4.0.3"
+    "webpack-merge": "^4.2.2"
   }
 }
