--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "file-saver": "^2.0.2",
     "path-to-regexp": "^6.1.0",
     "preact": "^10.5.4",
+    "react-helmet": "^6.1.0",
     "react-redux": "^7.2.0",
     "react-use": "^14.1.1",
     "redux": "^4.0.5",
@@ -97,6 +98,7 @@
     "postcss-cssnext": "^3.1.0",
     "postcss-loader": "^4.0.3",
     "prettier": "^2.0.5",
+    "robotstxt-webpack-plugin": "^7.0.0",
     "style-loader": "^1.1.3",
     "styled-components": "^5.1.1",
     "typescript": "^3.9.7",
