--- a/package.json
+++ b/package.json
@@ -24,10 +24,10 @@
   },
   "scripts": {
     "lint": "eslint --ext .js,.jsx,.ts,.tsx ./src",
-    "build": "cross-env MOCK_REQUEST=false webpack --config config/webpack.production.js",
-    "build:analyze": "cross-env MOCK_REQUEST=false BUNDLE_ANALYZE=true webpack --config config/webpack.production.js",
-    "start": "cross-env MOCK_REQUEST=false webpack-dev-server --config config/webpack.development.js",
-    "start:mock": "cross-env MOCK_REQUEST=true webpack-dev-server --config config/webpack.development.js",
+    "build": "cross-env MOCK_REQUEST=false webpack --config config/webpack.production.js --progress --hide-modules",
+    "build:analyze": "cross-env MOCK_REQUEST=false BUNDLE_ANALYZE=true webpack --config config/webpack.production.js --progress --hide-modules",
+    "start": "cross-env MOCK_REQUEST=false webpack-dev-server --config config/webpack.development.js --progress --hide-modules",
+    "start:mock": "cross-env MOCK_REQUEST=true webpack-dev-server --config config/webpack.development.js --progress --hide-modules",
     "test": "jest",
     "prettier": "prettier ./src/**/**.{ts,tsx} --loglevel warn --write"
   },
@@ -101,8 +101,9 @@
     "robotstxt-webpack-plugin": "^7.0.0",
     "style-loader": "^1.1.3",
     "styled-components": "^5.1.1",
-    "typescript": "^3.9.7",
+    "typescript": "^4.0.3",
     "typescript-loader": "^1.1.3",
+    "typescript-plugin-css-modules": "^2.7.0",
     "url-loader": "^4.1.0",
     "webpack": "^4.42.0",
     "webpack-bundle-analyzer": "^3.9.0",
