--- a/package.json
+++ b/package.json
@@ -86,6 +86,7 @@
     "eslint-plugin-react": "^7.19.0",
     "eslint-plugin-react-hooks": "^2.5.0",
     "file-loader": "^6.0.0",
+    "git-revision-webpack-plugin": "^3.0.6",
     "happypack": "^5.0.1",
     "html-webpack-plugin": "^3.2.0",
     "husky": "^4.2.5",
