--- a/.babelrc
+++ b/.babelrc
@@ -9,6 +9,7 @@
       "import",
       { "libraryName": "antd", "libraryDirectory": "es", "style": "css" }
     ],
+    "@babel/plugin-transform-runtime",
     // [
     //   "@babel/plugin-proposal-decorators",
     //   {
