--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,7 +4,11 @@
     "paths": {
       "@/*": ["./src/*"],
       "mock": ["./mock"],
-      "base-component": ["./src/components/base"]
+      "base-component": ["./src/components/base"],
+      "react": "./node_modules/preact/compat",
+      "react-dom": "./node_modules/preact/compat",
+      "react-dom/test-utils/": "./node_modules/preact/test-utils",
+      "router": ["./src/utils/customRouter.tsx"]
     },
     "jsx": "react",
     "esModuleInterop": true,
