--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,9 +5,9 @@
       "@/*": ["./src/*"],
       "mock": ["./mock"],
       "base-component": ["./src/components/base"],
-      "react": "./node_modules/preact/compat",
-      "react-dom": "./node_modules/preact/compat",
-      "react-dom/test-utils/": "./node_modules/preact/test-utils",
+      "react": ["./node_modules/preact/compat"],
+      "react-dom": ["./node_modules/preact/compat"],
+      "react-dom/test-utils/": ["./node_modules/preact/test-utils"],
       "router": ["./src/utils/customRouter.tsx"]
     },
     "jsx": "react",
