--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "antd": "^4.0.3",
     "axios": "^0.19.2",
     "file-saver": "^2.0.2",
+    "koa": "^2.13.0",
     "path-to-regexp": "^6.1.0",
     "preact": "^10.5.4",
     "react-helmet": "^6.1.0",
@@ -28,6 +29,7 @@
     "build:analyze": "cross-env MOCK_REQUEST=false BUNDLE_ANALYZE=true webpack --config config/webpack.production.js --progress --hide-modules",
     "start": "cross-env MOCK_REQUEST=false webpack-dev-server --config config/webpack.development.js --progress --hide-modules",
     "start:mock": "cross-env MOCK_REQUEST=true webpack-dev-server --config config/webpack.development.js --progress --hide-modules",
+    "start:ssr": "babel-node --config-file ./.babelrc  --extensions \".ts,.tsx\" ./server/server.tsx ",
     "test": "jest",
     "prettier": "prettier ./src/**/**.{ts,tsx} --loglevel warn --write"
   },
@@ -47,6 +49,7 @@
   "devDependencies": {
     "@babel/cli": "^7.8.4",
     "@babel/core": "^7.8.7",
+    "@babel/node": "^7.12.1",
     "@babel/plugin-proposal-class-properties": "^7.10.4",
     "@babel/plugin-proposal-decorators": "^7.10.5",
     "@babel/plugin-transform-runtime": "^7.12.1",
@@ -56,6 +59,7 @@
     "@types/axios": "^0.14.0",
     "@types/file-saver": "^2.0.1",
     "@types/jest": "^25.2.1",
+    "@types/koa": "^2.11.6",
     "@types/mockjs": "^1.0.2",
     "@types/reach__router": "^1.3.5",
     "@types/react": "^16.9.44",
