--- a/package.json
+++ b/package.json
@@ -98,6 +98,7 @@
     "postcss": "^8.1.1",
     "postcss-cssnext": "^3.1.0",
     "postcss-loader": "^4.0.3",
+    "postcss-preset-env": "^6.7.0",
     "prettier": "^2.0.5",
     "robotstxt-webpack-plugin": "^7.0.0",
     "style-loader": "^1.1.3",
