--- a/.babelrc
+++ b/.babelrc
@@ -1,6 +1,20 @@
 {
   "presets": [
-    "@babel/preset-env",
+    [
+      "@babel/preset-env",
+      {
+        "targets": {
+          "browsers": [
+            "ie >= 9",
+            "ff >= 30",
+            "chrome >= 34",
+            "safari >= 7",
+            "opera >= 23",
+            "bb >= 10"
+          ]
+        }
+      }
+    ],
     "@babel/preset-typescript",
     "@babel/preset-react"
   ],
