--- a/package.json
+++ b/package.json
@@ -7,19 +7,16 @@
   "dependencies": {
     "@ant-design/colors": "^5.0.0",
     "@ant-design/icons": "^4.0.3",
-    "@babel/runtime": "^7.10.4",
     "axios": "^0.19.2",
     "file-saver": "^2.0.2",
     "path-to-regexp": "^6.1.0",
     "preact": "^10.5.4",
     "react-helmet": "^6.1.0",
-    "react-redux": "^7.2.0",
     "react-use": "^14.1.1",
-    "redux": "^4.0.5",
+    "redux-logger": "^3.0.6",
     "redux-saga": "^1.1.3",
     "redux-saga-catch": "^0.0.10",
-    "saga-duck": "^3.3.0",
-    "use-react-saga": "^0.0.8"
+    "use-duck-state": "^0.2.3"
   },
   "scripts": {
     "lint": "eslint --ext .js,.jsx,.ts,.tsx ./src",
@@ -56,6 +53,7 @@
     "@types/file-saver": "^2.0.1",
     "@types/jest": "^25.2.1",
     "@types/mockjs": "^1.0.2",
+    "@types/node": "^14.14.16",
     "@types/reach__router": "^1.3.5",
     "@types/react": "^16.9.44",
     "@types/react-dom": "^16.9.8",
